syntax = "proto3";

package review_service;

option go_package = "./proto";

service ReviewService {
    rpc SayHello(HelloRequest) returns (HelloReply);
    rpc UploadDiff(UploadDiffRequest) returns (Unit);
    rpc CreateSession(Unit) returns (CreateSessionReply);
    rpc VerifySession(VerifySessionRequest) returns (Unit);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

message UploadDiffRequest {
    string diff = 1;
    string user = 2;
}

message CreateSessionReply {
    string nonce = 1;
}

message VerifySessionRequest {
    string signedNonce = 1;
    string user = 2;
}

message Unit {
}
